dataset1235/2025-2/2868285114/users/214715729/executions/3792430146_4142573950.log
== SUBMISSION (2025-09-03 04:04:53)
-- CODE: 
n = int(input())
if n < 12:
 preco = 1.50
else:
 preco = 1.35
total = n * preco
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 04:04:43)
-- CODE: 
n = int(input())
if n < 12:
preco = 1.50
else:
preco = 1.35
total = n * preco
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 03:41:53)
-- CODE: 
qtd = int(input())
if qtd < 12:
  preco = 1.50
else:
  preco = 1.35
  total = qtd * preco
  print(f"{total:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
None
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.20
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
None
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 03:41:50)
-- CODE: 
qtd = int(input())
if qtd < 12:
  preco = 1.50
else:
  preco = 1.35
  total = qtd * preco
  print(f"{total:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
None
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.20
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
None
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 04:04:41)
-- CODE: 
n = int(input())
if n < 12:
preco = 1.50
else:
preco = 1.35
total = n * preco
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 04:04:42)
-- CODE: 
n = int(input())
if n < 12:
preco = 1.50
else:
preco = 1.35
total = n * preco
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
-- ERROR:
File "XXXX", line 3
    preco = 1.50
    ^
IndentationError: expected an indented block after 'if' statement on line 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 03:41:52)
-- CODE: 
qtd = int(input())
if qtd < 12:
  preco = 1.50
else:
  preco = 1.35
  total = qtd * preco
  print(f"{total:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
None
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.20
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
None
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
